# SpaghettiKart

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Info.plist  Makefile  README.md  Resource.rc  SpaghettiKart.desktop  build.sh  config.yml  ctx_includes.c  lus-cvars.cmake  m2c_helper.sh  properties.h  properties.h.in  valgrind_callgrind.sh  vcpkg.json
.github/workflows/: clang-format-suggest.yml  clang-format.yml  clang-pr.yml  doxygen-and-linux-test.yml  linux-compile.yml  macos-compile.yml  main.yml  windows-compile.yml
asm/os/: parameters.s
assets/gizmo/: gizmo_center_button  gizmo_center_button_tri_0  gizmo_center_button_vtx_0  gizmo_center_button_vtx_cull  mat_gizmo_center_button_gizmo_center_button  mat_scale_handle_f3dlite_material  scale_handle  scale_handle_tri_0  scale_handle_vtx_0  scale_handle_vtx_cull
assets/hmintro/: gradientbottom.rgba16  lusgrade.rgba16  mat_poweredbylus_lus  mat_poweredbylus_power  poweredbylus  poweredbylus_tri_0  poweredbylus_tri_1  poweredbylus_vtx_0  poweredbylus_vtx_1  poweredbylus_vtx_cull
cmake/: lus-cvars.cmake  packaging.cmake
course_metadata/: D_0D009418.inc.c  D_0D009568.inc.c  D_0D0096B8.inc.c  D_0D009808.inc.c  D_800DCBB4.inc.c  gBombKartSpawns.inc.c  gCPUSteeringSensitivity.inc.c  gCourseDebugNames.inc.c  gCourseNames.inc.c  gCoursePathSizes.inc.c  gCoursePathTable.inc.c  gCoursePathTableUnknown.inc.c  gCupSelectionByCourseId.inc.c  gKartAIBehaviourLUT.inc.c  gKartAICourseMaximumSeparation.inc.c  gKartAICourseMinimumSeparation.inc.c  gPerCupIndexByCourseId.inc.c  sCourseLengths.inc.c  sSkyColors.inc.c  sSkyColors2.inc.c
courses/: all_course_data.h  all_course_model.h  all_course_offsets.h  all_course_packed.h  courseTable.c  courseTable.h  staff_ghost_data.c  staff_ghost_data.h
courses/banshee_boardwalk/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/big_donut/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/block_fort/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/bowsers_castle/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/choco_mountain/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/dks_jungle_parkway/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/double_deck/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/frappe_snowland/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/harbour/: ghostship_model.c  ghostship_model.h  powered.c  powered.h  ship2_model.c  ship2_model.h  ship3_model.c  ship3_model.h  ship_model.c  ship_model.h  starship_model.c  starship_model.h  track.c  track.h
courses/kalimari_desert/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/koopa_troopa_beach/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/luigi_raceway/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/mario_raceway/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c  course_vertices.c  course_vertices.h
courses/moo_moo_farm/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/rainbow_road/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/royal_raceway/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/sherbet_land/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/skyscraper/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/test_course/: data.c  model.c
courses/toads_turnpike/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  course_offsets.c
courses/wario_stadium/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.inc.c  course_displaylists.inc.h  course_offsets.c
courses/yoshi_valley/: course_data.c  course_data.h  course_displaylists.c  course_displaylists.h  course_displaylists.inc.c  (+1 more)
docs/: BUILDING.md  PORT-BUILDING.md  custom-characters.md  custom-track.md  faq.md  modding.md  textures-pack.md
enhancements/: flycam.patch
include/: actor_types.h  align_asset_macro.h  common_structs.h  course.h  course_offsets.h  debug.h  decode.h  defines.h  kart_attributes.h  macros.h  mk64.h  objects.h  segments.h  stubs.h  vehicles.h
models/: README.MD
src/: animation.c  animation.h  buffers.h  camera.c  camera.h  code_800029B0.c  code_800029B0.h  code_80004740.c  code_80004740.h  code_80005FD0.c  code_80005FD0.h  code_8003DC40.c  code_80057C60.c  code_80057C60.h  code_80057C60_var.c  code_8006E9C0.c  code_8006E9C0.h  code_80086E70.c  code_80086E70.h  code_80091440.c  code_80091440.h  code_80091750.c  code_80091750.h  code_800AF9B0.c  course_metadata.c  course_metadata.h  crash_screen.c  crash_screen.h  data_segment2.h  effects.c  effects.h  gbiMacro.c  harbour_masters.c  harbour_masters.h  kart_dma.c  kart_dma.h  main.c  main.h  math_util_2.c  math_util_2.h  (+23 more)
tools/: format.py  linkonly_generator.py
(+880 files in other folders)
